# Parallel-SSSP

./: .gitignore  CMakeLists.txt  README.md
include/: graph.h  graph.hpp  utils.hpp
scripts/: benchmark.py  generate_graph.py  performance_profiler.py  visualize_graph.py
src/: generate_updates.cpp  graph.cpp  main.cpp  main_mpi.cpp  main_serial.cpp  sssp_parallel_mpi.cpp  sssp_parallel_openmp.cpp  sssp_sequential.cpp  utils.cpp
src/mpi/: main_mpi.cpp  sssp_parallel_mpi.cpp
src/parallel/: main_parallel.cpp  sssp_parallel_openmp.cpp
src/serial/: main_serial.cpp  sssp_sequential.cpp
tools/: generate_updates.cpp
